# cemu-libretro

./: CMakeLists.txt  LIBRETRO.md  cemu_libretro.info
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp
src/Cafe/: CafeSystem.cpp  CafeSystem.h
src/Cafe/Filesystem/: fscDeviceHostFS.cpp  fscDeviceHostFS.h
src/Cafe/Filesystem/FST/: FST.cpp  FST.h  KeyCache.cpp
src/Cafe/Filesystem/WUD/: wud.cpp  wud.h
src/Cafe/Filesystem/WUHB/: WUHBReader.cpp  WUHBReader.h
src/Cafe/GameProfile/: GameProfile.h
src/Cafe/GraphicPack/: GraphicPack2.cpp  GraphicPack2.h
src/Cafe/HW/Espresso/Interpreter/: PPCInterpreterHLE.cpp
src/Cafe/HW/Espresso/Recompiler/: PPCRecompiler.cpp
src/Cafe/HW/Latte/Core/: LatteRenderTarget.cpp  LatteThread.cpp  LatteTiming.cpp  LatteTiming.h
src/Cafe/OS/common/: OSCommon.cpp  OSCommon.h
src/Cemu/Tools/DownloadManager/: DownloadManager.cpp
src/Common/: CMakeLists.txt  VFSFileStream.cpp  VFSFileStream.h  precompiled.h
src/Common/ExceptionHandler/: ExceptionHandler.cpp
src/audio/: CMakeLists.txt  IAudioAPI.cpp  LibretroAudioAPI.cpp  LibretroAudioAPI.h
src/config/: ActiveSettings.cpp  ActiveSettings.h
src/gui/: CMakeLists.txt
src/gui/headless/: HeadlessWindowSystem.cpp
src/imgui/: imgui_impl_opengl3.cpp
src/input/api/: InputAPI.h
src/input/api/DSU/: DSUControllerProvider.h
src/libretro/: CMakeLists.txt  CemuLibretro.cpp  CemuLibretroLinux.cpp  LibretroAudioAPI.cpp  LibretroAudioAPI.h  LibretroLogging.cpp  LibretroLogging.h  LibretroWindowSystem.cpp  libretro.h  libretro_core.cpp
(+15 files in other folders)
